--- a/index.html
+++ b/index.html
@@ -32,11 +32,22 @@
         </div>
     </nav>
     <main class="principal">
-        <article>
+        <article class="sobre">
             <h2>Sobre Nós</h2>
             <img src="img/loja.jpg" alt="NODESHOP - loja de informatica">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas itaque reiciendis rem a, quisquam modi corporis quo, blanditiis excepturi nam odit animi eos eaque eum similique accusantium esse. Provident, veritatis!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus cum labore quia, minima nulla, ipsum dignissimos optio inventore ipsa sit aperiam vitae explicabo harum sint soluta! Dolorem doloribus facilis quam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique incidunt dolorum reiciendis amet vero minus error nostrum quae ipsam facere necessitatibus, nihil ab odit doloremque, dolore quo quasi officiis. Aliquam?  </p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas itaque reiciendis rem a, quisquam modi corporis quo, blanditiis excepturi nam odit animi eos eaque eum similique accusantium esse. Provident, veritatis!Lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus cum labore quia, minima nulla, ipsum dignissimos optio inventore ipsa sit aperiam vitae explicabo harum sint soluta! Dolorem doloribus facilis quam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique incidunt dolorum reiciendis amet vero minus error nostrum quae ipsam facere necessitatibus, nihil ab odit doloremque, dolore quo quasi officiis. Aliquam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta eligendi voluptatibus natus rerum quidem laboriosam reiciendis nisi, ea molestias perferendis perspiciatis, praesentium adipisci officia esse vitae laborum deserunt laudantium quis.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nemo omnis quia quae officiis dolore repellat praesentium odit aliquam reprehenderit. A delectus suscipit consequuntur nostrum dolorem nobis dicta quidem numquam.  </p>
         </article>
+        <aside class="onde-estamos">
+            <h2> Onde estamos</h2>
+            <p>Rua. Das três meninas - Centro Comercial, Diadema - sp</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3653.3372824592566!2d-46.60914428533413!3d-23.69964657259793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce4465e97180e5%3A0x64d1637f134ae1b7!2sR.%20das%20Tr%C3%AAs%20Meninas%2C%20185%20-%20Serraria%2C%20Diadema%20-%20SP%2C%2009981-380!5e0!3m2!1sen!2sbr!4v1610224411631!5m2!1sen!2sbr"></iframe>
+            <h2>Contatos</h2>
+            <ul>
+                <li><i class="fa fa-phone fa-lg"></i>(11) 982400882</li>
+                <li><i class="fa fa-whatsapp fa-lg"></i> (11) 982400882</li>
+                <li><i class="fa fa-envelope fa-lg"></i> josueserraria@gmail.com</li>
+            </ul>
+        </aside>
     </main>
 </body>
 </html>
